# talk-to-portfolio

./: AGENTS.md
.codex/agents/: backend.toml  frontend.toml
.codex/skills/efficient-frontier/: SKILL.md
.codex/skills/efficient-frontier/scripts/: app.py  chat.py  chat_worker.py  frontier.py
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  chat.py  chat_worker.py  frontier.py  main.py  schemas.py
backend/tests/: test_chat_validation.py  test_frontier_api.py
datasets/: stock_prices.csv
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  assetStats.test.ts  assetStats.ts  styles.css  types.ts
