[project]
name = "efficient-frontier-backend"
version = "0.1.0"
description = "FastAPI backend for an Efficient Frontier dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "yfinance>=0.2.40,<1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0,<9.0", "httpx>=0.27,<1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
